<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="en_US"
        android:entries="@array/speechLocales"
        android:entryValues="@array/speechLocaleValues"
        android:key="speechLocale"
        android:title="@string/locale_setting_title" />
    <ListPreference
        android:defaultValue="0.8"
        android:entries="@array/speechSpeed"
        android:entryValues="@array/speechSpeedValues"
        android:key="speechSpeed"
        android:title="@string/speed_setting_title" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/wordPause"
        android:entryValues="@array/wordPauseValues"
        android:key="wordPause"
        android:title="@string/pause_setting_title" />
</PreferenceScreen>
