<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.purva.nits.spokenenglishapp.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_microphone_black_24dp"
        android:title="@string/pref_header_speech" />

    <header
        android:fragment="com.purva.nits.spokenenglishapp.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.purva.nits.spokenenglishapp.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
